--- a/2.html
+++ b/2.html
@@ -3,8 +3,12 @@
 <head>
 <title>WEB1-HTML</title>
 <meta charset="utf-8">
+<style>
+  a {
+    color:black;
+  }
+  </style>
 </head>
-
 <body>
   <h1><a href="index.html">WEB</a></h1>
 this is <u><b>code</b>,</u><strong>source,</strong>
@@ -13,7 +17,7 @@ this is <u><b>code</b>,</u><strong>source,</strong>
 <h2>부모자식과 목록 (ol, ul, li)</h2>
 <ol>
   <li><a href="2.html">html</a></li>
-  <li><a href="3.html">CSS</a></li>
+  <li><a href="3.html"style="color:red">CSS</a></li>
   <li><a href="4.html">JavaScript</a></li>
 </ol><ul>
   <li>egoing</li>
