--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <style>
   a {
-    color:black;
+    color:black;text-decoration:none;
   }
   </style>
 </head>
@@ -17,7 +17,7 @@ this is <u><b>code</b>,</u><strong>source,</strong>
 <h2>부모자식과 목록 (ol, ul, li)</h2>
 <ol>
   <li><a href="2.html">html</a></li>
-  <li><a href="3.html"style="color:red">CSS</a></li>
+  <li><a href="3.html"style="color:red;text-decoration:underline">CSS</a></li>
   <li><a href="4.html">JavaScript</a></li>
 </ol><ul>
   <li>egoing</li>
