--- a/javascript.html
+++ b/javascript.html
@@ -25,8 +25,21 @@
     </script>
     <input type="button" value="hi" onclick="alert('hi')">
     <br>
-    <input type="text" onchange="alert('changed')">
-    <input type="text" onkeydown="alert('keydown!!!')">
+    onchange <input type="text" onchange="alert('changed')">
+    onkeydown <input type="text" onkeydown="alert('keydown!!!')">
+    <br>
+    <input id="night_day" type="button" value='night toggle' onclick="
+    if(document.querySelector('#night_day').value === 'night toggle'){
+      document.querySelector('body').style.backgroundColor='black';
+      document.querySelector('body').style.color='white';
+      document.querySelector('#night_day').value='day toggle';
+    }
+    else{
+      document.querySelector('body').style.backgroundColor='white';
+      document.querySelector('body').style.color='black';
+      document.querySelector('#night_day').value='night toggle';
+    }
+    ">
   <p>
     자바스크립트(JavaScript)는 객체(object) 기반의 스크립트 언어입니다. HTML로는 웹의 내용을 작성하고, CSS로는 웹을 디자인하며, 자바스크립트로는 웹의 동작을 구현할 수 있습니다. 자바스크립트는 주로 웹 브라우저에서 사용되나, Node.js와 같은 프레임워크를 사용하면 서버 측 프로그래밍에서도 사용할 수 있습니다. 현재 컴퓨터나 스마트폰 등에 포함된 대부분의 웹 브라우저에는 자바스크립트 인터프리터가 내장되어 있습니다.
   </p>
