--- a/3.html
+++ b/3.html
@@ -13,6 +13,29 @@
   <li><a href="2.html">html</a></li>
   <li><a href="3.html">CSS</a></li>
   <li><a href="4.html">JavaScript</a></li>
+  <li>
+    <input id="night_day" type="button" value='night toggle' onclick="
+    var target=document.querySelector('body');
+    var alist=document.querySelectorAll('a');
+    if(this.value === 'night toggle'){
+      var i=0;
+      while (i<alist.length){
+      alist[i].style.color='powderblue';
+      i=i+1;}
+      target.style.backgroundColor='black';
+      target.style.color='white';
+      this.value='day toggle';
+    }
+    else{
+      var i=0;
+      while (i<alist.length){
+      alist[i].style.color='blue';
+      i=i+1;}
+      target.style.backgroundColor='white';
+      target.style.color='black';
+      this.value='night toggle';
+    }
+    "></li>
 </ol>
   <div id="article">
   <h2>CSS</h2>
