--- a/3.html
+++ b/3.html
@@ -4,6 +4,30 @@
 <title>WEB1-CSS</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
+  <script>
+    function nightdayhandler(self){
+      var target=document.querySelector('body');
+      var alist=document.querySelectorAll('a');
+      if(self.value === 'night toggle'){
+        var i=0;
+        while (i<alist.length){
+        alist[i].style.color='powderblue';
+        i=i+1;}
+        target.style.backgroundColor='black';
+        target.style.color='white';
+        self.value='day toggle';
+      }
+      else{
+        var i=0;
+        while (i<alist.length){
+        alist[i].style.color='blue';
+        i=i+1;}
+        target.style.backgroundColor='white';
+        target.style.color='black';
+        self.value='night toggle';
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -14,28 +38,8 @@
   <li><a href="3.html">CSS</a></li>
   <li><a href="4.html">JavaScript</a></li>
   <li>
-    <input id="night_day" type="button" value='night toggle' onclick="
-    var target=document.querySelector('body');
-    var alist=document.querySelectorAll('a');
-    if(this.value === 'night toggle'){
-      var i=0;
-      while (i<alist.length){
-      alist[i].style.color='powderblue';
-      i=i+1;}
-      target.style.backgroundColor='black';
-      target.style.color='white';
-      this.value='day toggle';
-    }
-    else{
-      var i=0;
-      while (i<alist.length){
-      alist[i].style.color='blue';
-      i=i+1;}
-      target.style.backgroundColor='white';
-      target.style.color='black';
-      this.value='night toggle';
-    }
-    "></li>
+    <input id="night_day" type="button" value='night toggle' onclick="nightdayhandler(this);">
+  </li>
 </ol>
   <div id="article">
   <h2>CSS</h2>
