--- a/3.html
+++ b/3.html
@@ -5,25 +5,38 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
   <script>
+  var target = document.querySelector('body');
+  var alist = document.querySelectorAll('a');
+
+    function LinkSetColor(color) {
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while(i<alist.length){
+        alist[i].style.color = color;
+        i = i + 1;
+      }
+    }
+    function BodySetColor(color){
+      document.querySelector('body').style.color=color;
+    }
+
+    function BodySetBackgroundColor(color){
+      document.querySelector('body').style.backgroundColor=color;
+    }
+
     function nightdayhandler(self){
-      var target=document.querySelector('body');
-      var alist=document.querySelectorAll('a');
+      var target = document.querySelector('body');
       if(self.value === 'night toggle'){
-        var i=0;
-        while (i<alist.length){
-        alist[i].style.color='powderblue';
-        i=i+1;}
-        target.style.backgroundColor='black';
-        target.style.color='white';
+        BodySetBackgroundColor('black');
+        BodySetColor('white');
+        LinkSetColor('powderblue');
         self.value='day toggle';
       }
+
       else{
-        var i=0;
-        while (i<alist.length){
-        alist[i].style.color='blue';
-        i=i+1;}
-        target.style.backgroundColor='white';
-        target.style.color='black';
+        BodySetBackgroundColor('white');
+        BodySetColor('black');
+        LinkSetColor('blue');
         self.value='night toggle';
       }
     }
@@ -38,7 +51,7 @@
   <li><a href="3.html">CSS</a></li>
   <li><a href="4.html">JavaScript</a></li>
   <li>
-    <input id="night_day" type="button" value='night toggle' onclick="nightdayhandler(this);">
+    <input id="night_day" type="button" value='night toggle' onclick="nightdayhandler";>
   </li>
 </ol>
   <div id="article">
